syntax = "proto3";

package cura.plugins.proto;

// These are the different slots that plugins can hook into
enum SlotID {
  SIMPLIFY = 0;
  POSTPROCESS = 1;
}

// ---------------------------------------------------------------------
// The handshake service [Required for all plugins]
service Plugin {
  rpc Identify(PluginRequest) returns (PluginResponse) {}
}

message PluginRequest {
  SlotID id = 1;
}

message PluginResponse {
  string plugin_hash = 1;
  string version = 2;
}


// ---------------------------------------------------------------------
// The SIMPLIFY slot service

service Simplify {
  rpc Simplify(SimplifyRequest) returns (SimplifyResponse) {}
}

message SimplifyRequest {
  Polygons polygons = 1;
  uint64 max_resolution = 2;
  uint64 max_deviation = 3;
  uint64 max_area_deviation = 4;
}

message SimplifyResponse {
  Polygons polygons = 1;
}

// ---------------------------------------------------------------------
// The POSTPROCESS slot service

service Postprocess {
  rpc Postprocess(PostprocessRequest) returns (PostprocessResponse) {}
}

message PostprocessRequest {
  string gcode_word = 1;
}

message PostprocessResponse {
  string gcode_word = 1;
}